# fema-assist

./: .gitignore  README.md  check.py  check.yaml  create_docetl_json.py  parse.py  parse_disaster_declaration.py  pipeline.yaml  populate_parsed_fields.py  populate_pdas.py  pull_pda.py  pyproject.toml  storage.py  test_set_truth.json
experiments/2025-04-07/: README.md  notes.md
experiments/2025-04-07/parsing-results/: form-1.json  form-2.json  form-3.json
experiments/2025-04-08/: README.md  eval-2025-04-08.json
experiments/2025-04-28/: README.md  report.txt
experiments/2025-04-30/: README.md  form-filled-N-15.json  form-filled-N-5.json  results-N-15.txt  results-N-5.txt
scripts/: compress_metadata.py  compress_pdfs.py  generate_docetl.py  populate_declaration_ids.py  populate_parsed_fields.py  populate_pdas.py  setup_declarations.py
src/fema_agent/: check.py  parse.py  simple_form_fill.py  storage.py
src/fema_agent/forms/: fema_010_0_13.py  form.py
