[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fema-assist"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dill>=0.3.9",
    "docetl==0.2.2",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
]

[tool.uv.sources]
docetl = { git = "https://github.com/ucbepic/docetl" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
